osprey_worker/src/osprey/engine/stdlib/udfs/tests/test_rules/test_rules_must_have_str_or_f_str_descriptions.txt
error: argument `description` to `Rule` requires either a string literal or an f-string
--> main.sml:3:38
     |
   3 | R = Rule(when_all=[True], description=description)
     |                                       ^ got `Name` node, expected `String` or `FormatString` literal